# OOP_CG_Java_vsu

./: .gitignore  README.md
RewriteC++/CG_TASKS/: CMakeLists.txt  drawable.h  fixed.cpp  fixed.h  house.h  rainbow.h  sun.cpp  sun.h  triangle.cpp  triangle.h  trianglegrad.cpp  trianglegrad.h  trianglegrad_alt.cpp  trianglegrad_alt.h  widget.cpp  widget.h
RewriteC++/CG_TASKS/objs/: house.cpp  house.h  rainbow.cpp  rainbow.h  sun.h  triangle.h  trianglegrad_alt.cpp  trianglegrad_alt.h
RewriteC++/CG_TASKS/src/: Triangle_3.pro  widget.cpp  widget.h
RewriteC++/Tests/QtTestsCG/: CMakeLists.txt  tst_triangletests.cpp
RewriteC++/Tests/build-QtTestsCG-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TriangleTests.cbp  cmake_install.cmake
RewriteC++/Tests/build-QtTestsCG-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/TriangleTests_autogen/: moc_predefs.h
RewriteC++/build-CG_tasks-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/: CG_tasks.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
RewriteC++/build-CG_tasks-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/CG_tasks_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d
RewriteC++/build-prog2-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  prog2.cbp
RewriteC++/build-prog2-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/prog2_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d
Задачи Java/First task CG/src/: Main.java
(+20 files in other folders)
